--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 ADMIN_EMAIL = himanshumirwal@gmail.com
-ADMIN_PASSWORD = himanshu123
+ADMIN_PASSWORD = emknfpurufwqeiob
 ADMIN_EMAIL_Second = kartik0015mirwal@gmail.com
